--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,2 +1,23 @@
-<div class = "side-bar-header"></div>
-<div class = "rooms"></div>
+<div class = "side-bar-header">
+  <div class = "header-name">
+    <a href = "#">ITO</a>
+  </div>
+
+  <div class = "create-room">
+    <a href = "#">チャットを作成する</a>
+  </div>
+</div>
+
+<div class = "rooms">
+ <div class = "room">
+    <div class = "room-name">
+     <a href = "#">itoroom1</a>
+    </div>
+ </div>
+
+  <div class = "room">
+    <div class = "room-name">
+     <a href = "#">itoroom2</a>
+    </div>
+  </div>
+ </div>
