--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,6 @@
 <div class = "side-bar-header">
   <div class = "header-name">
-    <a href = "#">ITO</a>
+    <%= link_to current_user.name, edit_user_path(current_user) %>
   </div>
 
   <div class = "create-room">
